--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -147,7 +147,7 @@ button:focus{
 .color_65_titulos{
     color: #656565;
     font-weight: 700;
-    font-size: 1.875rem;
+    font-size: 1.675rem;
 }
 .espaciados_texto{
     line-height: 1.6;
@@ -272,7 +272,7 @@ button:focus{
     width: 30%;
     height: 25%;
     background-color: #ffffff;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 @media(min-width: 640px){
     .flechas_tamaño_calender{
@@ -297,6 +297,7 @@ button:focus{
     color: #707070;
     font-weight: 400;
     font-size: 1.5rem;
+    margin: 0px;
 }
 @media(min-width: 768px){
     #diciembre_year{
@@ -308,14 +309,22 @@ button:focus{
         font-size: 2.1875rem;
     }
 }
-.cuadrado_azul_calender{
-    background-color: #3E729A;
+.cuadrado_calender{
     padding-bottom: 10px;
     padding-top: 3px;
     box-shadow:3px 1px 6px 1px #c0c0c0;
     -moz-box-shadow:3px 1px 6px 1px #c0c0c0;
     -webkit-box-shadow:3px 1px 6px 1px #c0c0c0;
 }
+
+.fondo-azul {
+    background-color: #3E729A;
+}
+
+.fondo-rojo {
+    background-color: #EC494B;
+}
+
 @media(min-width: 1024px){
     .cuadrado_azul_calender{
         padding-bottom: 1.875rem;
@@ -323,7 +332,7 @@ button:focus{
 }
 .fecha_number{
     font-size: 2.5rem;
-    font-weight: 200;
+    font-weight: 500;
     margin: 0;
     font-family: 'Lato', sans-serif;
 }
@@ -475,4 +484,8 @@ button:focus{
     .largo_eventos{
         height: 99%;
     }
+}
+
+#nada-h1-margin {
+    margin-bottom: 0.5rem;
 }
