--- a/src/app/search-results/search-results.page.html
+++ b/src/app/search-results/search-results.page.html
@@ -1,7 +1,17 @@
+<ion-header no-border>
+  <ion-toolbar mode="ios">
+    <ion-buttons slot="end">
+      <ion-button (click)="close ()" id="close-button">
+        <ion-icon slot="icon-only" name="close-circle"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header> 
+
 <ion-content>
   <ion-row>
     <ion-col size="12">
-      <ion-item class="ion-text-center margin-top" lines="none">
+      <ion-item class="ion-text-center" lines="none">
         <ion-label>
           <h1 class="titulo">Dircetur Cusco</h1>
           <p id="subtitulo">Authorized providers directory</p>
@@ -12,7 +22,7 @@
         <ion-item>
           <ion-icon name="search" class="color_icoon_search icon-padding"></ion-icon>
           <ion-input type="search" id="search_input" placeholder="Check on your touristic provider"  (keyup.enter)="onEnter ()" [(ngModel)]="search_text"></ion-input>
-          <ion-icon name="help-circle" class="color_icoon_search"></ion-icon>
+          <ion-icon name="send" class="color_icoon_search" (click)="search ()"></ion-icon>
         </ion-item>
       </ion-card>
     </ion-col>
@@ -26,38 +36,17 @@
 
       <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" *ngIf="is_loading" name="circles"></ion-spinner>
 
-     <!--<ion-list *ngIf="is_loading === false">
+      <ion-list *ngIf="is_loading === false">
         <div *ngFor="let item of items"> 
           <ion-item (click)="view_item (item)" [className]="item.reveal_child === true ? 'selected item-header' : 'no-selected item-header'">
-            <ion-icon id="icon-padding" name="search"></ion-icon>
+            <ion-icon id="icon-padding" [src]="get_icon (item)"></ion-icon>
             {{ item.nombre_comercial }}
             <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': item.reveal_child ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
           </ion-item>
 
           <ion-card *ngIf="item.reveal_child" class="card-content" [@animation-top]>
             <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" *ngIf="item.is_loading" name="circles"></ion-spinner>
-
-            <ul id="list-none" *ngIf="item.is_loading === false">
-              <li><span class="header-label">Teléfono:</span> <span class="content-label">{{ item.data.telefono }}</span></li>
-              <li><span class="header-label">E-Mail:</span> <span class="content-label">{{ item.data.correo }}</span></li>
-              <li><span class="header-label">Página Web:</span> <span class="content-label">{{ item.data.pagina_web }}</span></li>
-            </ul>
-          </ion-card>
-        </div>
-      </ion-list>--> 
-
-
-      <ion-list *ngIf="is_loading === false">
-        <div *ngFor="let item of items"> 
-          <ion-item (click)="view_item (item)" [className]="item.reveal_child === true ? 'selected item-header' : 'no-selected item-header'">
-            <ion-icon class="icon-padding"  src="assets/img/Grupo 409.svg"></ion-icon>
-            <p>Agencia</p>
-            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': item.reveal_child ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
-          </ion-item>
-
-          <ion-card *ngIf="item.reveal_child" class="card-content" [@animation-top]>
-            <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" *ngIf="item.is_loading" name="circles"></ion-spinner>
-            <ion-row>
+            <ion-row *ngIf="item.is_loading === false && item.tipo === 'agencia'">
               <ion-col size="12" class="ion-no-padding border_col">
                 <ion-row>
                 <ion-col size="12" size-sm="6" class="ion-no-padding">
@@ -99,30 +88,20 @@
                 <p id="color_negrita">How was your experience with this provider?</p>
                 <ion-row>
                   <ion-col size="6">
-                    <button class="btn_manos" id="like_bajo">
+                    <button class="btn_manos" id="like_bajo" (click)="on_click (item, 0)">
                       <ion-img :src="assets/img/Imagen_38.png"></ion-img>
                     </button>
                   </ion-col>
                   <ion-col size="6">
-                    <button class="btn_manos">
+                    <button class="btn_manos" (click)="on_click (item, 1)">
                       <ion-img :src="assets/img/Imagen_39.png"></ion-img>
                     </button>
                   </ion-col>
                 </ion-row>
               </ion-col>
             </ion-row>
-          </ion-card>
-        </div>
-        <div *ngFor="let item of items"> 
-          <ion-item (click)="view_item (item)" [className]="item.reveal_child === true ? 'selected item-header' : 'no-selected item-header'">
-            <ion-icon class="icon-padding"  src="assets/img/Grupo 404.svg"></ion-icon>
-            <p>Restuarante</p>
-            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': item.reveal_child ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
-          </ion-item>
 
-          <ion-card *ngIf="item.reveal_child" class="card-content" [@animation-top]>
-            <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" *ngIf="item.is_loading" name="circles"></ion-spinner>
-            <ion-row>
+            <ion-row *ngIf="item.is_loading === false && item.tipo === 'restaurante'">
               <ion-col size="12" class="ion-no-padding border_col">
                 <ion-row>
                   <ion-col size="6" class="ion-text-center">
@@ -162,30 +141,20 @@
                 <p id="color_negrita">How was your experience with this provider?</p>
                 <ion-row>
                   <ion-col size="6">
-                    <button class="btn_manos" id="like_bajo">
+                    <button class="btn_manos" id="like_bajo" (click)="on_click (item, 0)">
                       <ion-img :src="assets/img/Imagen_38.png"></ion-img>
                     </button>
                   </ion-col>
                   <ion-col size="6">
-                    <button class="btn_manos">
+                    <button class="btn_manos" (click)="on_click (item, 1)">
                       <ion-img :src="assets/img/Imagen_39.png"></ion-img>
                     </button>
                   </ion-col>
                 </ion-row>
               </ion-col>
             </ion-row>
-          </ion-card>
-        </div>
-        <div *ngFor="let item of items"> 
-          <ion-item (click)="view_item (item)" [className]="item.reveal_child === true ? 'selected item-header' : 'no-selected item-header'">
-            <ion-icon class="icon-padding"  src="assets/img/Grupo 408.svg"></ion-icon>
-            <p>tour guide</p>
-            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': item.reveal_child ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
-          </ion-item>
 
-          <ion-card *ngIf="item.reveal_child" class="card-content" [@animation-top]>
-            <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" *ngIf="item.is_loading" name="circles"></ion-spinner>
-            <ion-row>
+            <ion-row *ngIf="item.is_loading === false && item.tipo === 'guia'">
               <ion-col size="12" class="ion-no-padding border_col">
                 <ion-row>
                   <ion-col size="12" size-sm="6" class="ion-no-padding">
@@ -219,30 +188,20 @@
                 <p id="color_negrita">How was your experience with this provider?</p>
                 <ion-row>
                   <ion-col size="6">
-                    <button class="btn_manos" id="like_bajo">
+                    <button class="btn_manos" id="like_bajo" (click)="on_click (item, 0)">
                       <ion-img :src="assets/img/Imagen_38.png"></ion-img>
                     </button>
                   </ion-col>
                   <ion-col size="6">
-                    <button class="btn_manos">
+                    <button class="btn_manos" (click)="on_click (item, 1)">
                       <ion-img :src="assets/img/Imagen_39.png"></ion-img>
                     </button>
                   </ion-col>
                 </ion-row>
               </ion-col>
             </ion-row>
-          </ion-card>
-        </div>
-        <div *ngFor="let item of items"> 
-          <ion-item (click)="view_item (item)" [className]="item.reveal_child === true ? 'selected item-header' : 'no-selected item-header'">
-            <ion-icon class="icon-padding"  src="assets/img/Grupo 407.svg"></ion-icon>
-            <p>accommodation-Hotel</p>
-            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': item.reveal_child ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
-          </ion-item>
 
-          <ion-card *ngIf="item.reveal_child" class="card-content" [@animation-top]>
-            <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" *ngIf="item.is_loading" name="circles"></ion-spinner>
-            <ion-row>
+            <ion-row *ngIf="item.is_loading === false && item.tipo === 'alojamiento'">
               <ion-col size="12" class="ion-no-padding border_col">
                 <ion-row>
                   <ion-col size="6" class="ion-text-center">
@@ -282,12 +241,12 @@
                 <p id="color_negrita">How was your experience with this provider?</p>
                 <ion-row>
                   <ion-col size="6">
-                    <button class="btn_manos" id="like_bajo">
+                    <button class="btn_manos" id="like_bajo" (click)="on_click (item, 0)">
                       <ion-img :src="assets/img/Imagen_38.png"></ion-img>
                     </button>
                   </ion-col>
                   <ion-col size="6">
-                    <button class="btn_manos">
+                    <button class="btn_manos" (click)="on_click (item, 1)">
                       <ion-img :src="assets/img/Imagen_39.png"></ion-img>
                     </button>
                   </ion-col>
@@ -305,76 +264,56 @@
         </ion-label>
       </ion-item>
 
-      <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" *ngIf="is_loading" name="circles"></ion-spinner>
-
-     <!--<ion-list *ngIf="is_loading === false">
-        <div *ngFor="let item of items"> 
-          <ion-item (click)="view_item (item)" [className]="item.reveal_child === true ? 'selected item-header' : 'no-selected item-header'">
-            <ion-icon id="icon-padding" name="search"></ion-icon>
-            {{ item.nombre_comercial }}
-            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': item.reveal_child ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
+      <ion-list>
+        <div> 
+          <ion-item (click)="view_help (0)" class="item-header">
+            <ion-icon id="icon-padding" src="assets/icon/agencia-blue.svg"></ion-icon>
+            <p class="color-blue">Tourism Agency</p>
+            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': help_0 ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
           </ion-item>
-
-          <ion-card *ngIf="item.reveal_child" class="card-content" [@animation-top]>
-            <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" *ngIf="item.is_loading" name="circles"></ion-spinner>
-
-            <ul id="list-none" *ngIf="item.is_loading === false">
-              <li><span class="header-label">Teléfono:</span> <span class="content-label">{{ item.data.telefono }}</span></li>
-              <li><span class="header-label">E-Mail:</span> <span class="content-label">{{ item.data.correo }}</span></li>
-              <li><span class="header-label">Página Web:</span> <span class="content-label">{{ item.data.pagina_web }}</span></li>
-            </ul>
-          </ion-card>
-        </div>
-      </ion-list>--> 
-
-
-      <ion-list *ngIf="is_loading === false">
-        <div *ngFor="let item of items"> 
-          <ion-item (click)="view_item (item)" [className]="item.reveal_child === true ? 'selected item-header' : 'no-selected item-header'">
-            <ion-icon class="icon-padding"  src="assets/img/Grupo 409.svg"></ion-icon>
-            <p>Agencia</p>
-            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': item.reveal_child ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
-          </ion-item>
-            <ion-row *ngIf="item.reveal_child" [@animation-top]>
+            <ion-row *ngIf="help_0" [@animation-top]>
               <ion-col size="12" class="padding_tops_col">
                 <p class="color_descrion">La persona natural acreditada con el título de Guía Oficial de Turismo otorgado a nombre de la Nación, por institutos superiores y centros de formación superior oficialmente reconocidos, después de haber cursado y aprobado estudios por un lapso mínimo de seis semestres académicos. Licenciado en Turismo: La persona natural que ostenta el título de Licenciado en Turismo expedido por las universidades del país, o revalidado conforme a ley, si el título hubiera sido otorgado por una universidad extranjera, inscrito en el Colegio de Licenciados en Turismo.</p>
               </ion-col>
             </ion-row>
         </div>
-        <div *ngFor="let item of items"> 
-          <ion-item (click)="view_item (item)" [className]="item.reveal_child === true ? 'selected item-header' : 'no-selected item-header'">
-            <ion-icon class="icon-padding"  src="assets/img/Grupo 404.svg"></ion-icon>
-            <p>Restuarante</p>
-            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': item.reveal_child ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
+
+        <div> 
+          <ion-item (click)="view_help (1)" class="item-header">
+            <ion-icon id="icon-padding"  src="assets/icon/alojamiento-blue.svg"></ion-icon>
+            <p class="color-blue">Accommodations</p>
+            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': help_1 ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
           </ion-item>
 
-          <ion-row *ngIf="item.reveal_child" [@animation-top]>
+          <ion-row *ngIf="help_1" [@animation-top]>
             <ion-col size="12" class="padding_tops_col">
               <p class="color_descrion">La persona natural acreditada con el título de Guía Oficial de Turismo otorgado a nombre de la Nación, por institutos superiores y centros de formación superior oficialmente reconocidos, después de haber cursado y aprobado estudios por un lapso mínimo de seis semestres académicos. Licenciado en Turismo: La persona natural que ostenta el título de Licenciado en Turismo expedido por las universidades del país, o revalidado conforme a ley, si el título hubiera sido otorgado por una universidad extranjera, inscrito en el Colegio de Licenciados en Turismo.</p>
             </ion-col>
           </ion-row>
         </div>
-        <div *ngFor="let item of items"> 
-          <ion-item (click)="view_item (item)" [className]="item.reveal_child === true ? 'selected item-header' : 'no-selected item-header'">
-            <ion-icon class="icon-padding"  src="assets/img/Grupo 408.svg"></ion-icon>
-            <p>tour guide</p>
-            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': item.reveal_child ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
+
+        <div> 
+          <ion-item (click)="view_help (2)" class="item-header">
+            <ion-icon id="icon-padding"  src="assets/icon/guia-blue.svg"></ion-icon>
+            <p class="color-blue">Tour guides</p>
+            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': help_2 ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
           </ion-item>
 
-          <ion-row *ngIf="item.reveal_child" [@animation-top]>
+          <ion-row *ngIf="help_2" [@animation-top]>
             <ion-col size="12" class="padding_tops_col">
               <p class="color_descrion">La persona natural acreditada con el título de Guía Oficial de Turismo otorgado a nombre de la Nación, por institutos superiores y centros de formación superior oficialmente reconocidos, después de haber cursado y aprobado estudios por un lapso mínimo de seis semestres académicos. Licenciado en Turismo: La persona natural que ostenta el título de Licenciado en Turismo expedido por las universidades del país, o revalidado conforme a ley, si el título hubiera sido otorgado por una universidad extranjera, inscrito en el Colegio de Licenciados en Turismo.</p>
             </ion-col>
           </ion-row>
         </div>
-        <div *ngFor="let item of items"> 
-          <ion-item (click)="view_item (item)" [className]="item.reveal_child === true ? 'selected item-header' : 'no-selected item-header'">
-            <ion-icon class="icon-padding"  src="assets/img/Grupo 404.svg"></ion-icon>
-            <p>accommodation-Hotel</p>
-            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': item.reveal_child ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
+
+        <div> 
+          <ion-item (click)="view_help (3)" class="item-header">
+            <ion-icon id="icon-padding"  src="assets/icon/restaurante-blue.svg"></ion-icon>
+            <p class="color-blue">Restaurants</p>
+            <ion-icon slot="end" name="ios-arrow-forward" [ngStyle]="{'transform': help_3 ? 'rotate(90deg)' : 'none' }" class="transition"></ion-icon>
           </ion-item>
 
-          <ion-row *ngIf="item.reveal_child" [@animation-top]>
+          <ion-row *ngIf="help_3" [@animation-top]>
             <ion-col size="12" class="padding_tops_col">
               <p class="color_descrion">La persona natural acreditada con el título de Guía Oficial de Turismo otorgado a nombre de la Nación, por institutos superiores y centros de formación superior oficialmente reconocidos, después de haber cursado y aprobado estudios por un lapso mínimo de seis semestres académicos. Licenciado en Turismo: La persona natural que ostenta el título de Licenciado en Turismo expedido por las universidades del país, o revalidado conforme a ley, si el título hubiera sido otorgado por una universidad extranjera, inscrito en el Colegio de Licenciados en Turismo.</p>
             </ion-col>
