--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-menu side="end" contentId="first">
+  <ion-menu side="end" menuId="first">
     <ion-header>
       <ion-toolbar color="primary">
         <ion-title>Start Menu</ion-title>
