--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -126,9 +126,129 @@
           </ion-item> 
         </ion-col>
 
-        <ion-col size="8" size-md="4" offset="2" offset-md="4">
+        <ion-col size="10" size-sm="6" offset="1" offset-sm="3" text-center>
           <button class="btn_blanco_calendario" (click)="go_calendar ()">Show full calendar</button>
         </ion-col>
+    </ion-row>
+    <ion-row class="ion-padding-start ion-padding-end margin_bottom_new">
+      <ion-col size="12" text-center>
+        <h2 class="color_65_titulos">Turistical circuites in Cusco</h2>
+    </ion-col>
+    <ion-col size="12">
+      <ion-row>
+        <ion-col size="12" size-md="6" size-xl="4">
+          <ion-card>
+            <ion-card-content>
+              <ion-row>
+                <ion-col size="12" class="dercha_izquierda_cero">
+                  <ion-row>
+                    <ion-col size="4">
+                      <img src="assets/img/4a09bc9f9c00c41bac61c8856ac05a6c.png" width="100%">
+                    </ion-col>
+                    <ion-col size="8">
+                      <h2 class="titulo_card margin_bottom">Agro Artesanias Chichubamba</h2>
+                      <p class="descrip_pequeña margin_bottom">Comunidad de Chichubamba - Distrito y provincia de Urubamba</p>
+                      <p class="numero_color">2,820 m.s.n.m</p>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+                <ion-col size="12" class="dercha_izquierda_cero">
+                  <ion-row>
+                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                      <button class="btn_rojo_car">Alimentacion</button>
+                    </ion-col>
+                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                      <button class="btn_rojo_car">Ceramica</button>
+                    </ion-col>
+                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                      <button class="btn_rojo_car">Crianza de cuy</button>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+                <ion-col size="12">
+                  <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
+                </ion-col>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col size="12" size-md="6" size-xl="4">
+          <ion-card>
+            <ion-card-content>
+              <ion-row>
+                <ion-col size="12" class="dercha_izquierda_cero">
+                  <ion-row>
+                    <ion-col size="4">
+                      <img src="assets/img/4a09bc9f9c00c41bac61c8856ac05a6c.png" width="100%">
+                    </ion-col>
+                    <ion-col size="8">
+                      <h2 class="titulo_card margin_bottom">Agro Artesanias Chichubamba</h2>
+                      <p class="descrip_pequeña margin_bottom">Comunidad de Chichubamba - Distrito y provincia de Urubamba</p>
+                      <p class="numero_color">2,820 m.s.n.m</p>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+                <ion-col size="12" class="dercha_izquierda_cero">
+                  <ion-row>
+                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                      <button class="btn_rojo_car">Alimentacion</button>
+                    </ion-col>
+                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                      <button class="btn_rojo_car">Ceramica</button>
+                    </ion-col>
+                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                      <button class="btn_rojo_car">Crianza de cuy</button>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+                <ion-col size="12">
+                  <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
+                </ion-col>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col size="12" size-md="6" size-xl="4">
+          <ion-card>
+            <ion-card-content>
+              <ion-row>
+                <ion-col size="12" class="dercha_izquierda_cero">
+                  <ion-row>
+                    <ion-col size="4">
+                      <img src="assets/img/4a09bc9f9c00c41bac61c8856ac05a6c.png" width="100%">
+                    </ion-col>
+                    <ion-col size="8">
+                      <h2 class="titulo_card margin_bottom">Agro Artesanias Chichubamba</h2>
+                      <p class="descrip_pequeña margin_bottom">Comunidad de Chichubamba - Distrito y provincia de Urubamba</p>
+                      <p class="numero_color">2,820 m.s.n.m</p>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+                <ion-col size="12" class="dercha_izquierda_cero">
+                  <ion-row>
+                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                      <button class="btn_rojo_car">Alimentacion</button>
+                    </ion-col>
+                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                      <button class="btn_rojo_car">Ceramica</button>
+                    </ion-col>
+                    <ion-col size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+                      <button class="btn_rojo_car">Crianza de cuy</button>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+                <ion-col size="12">
+                  <p class="descripcion_completo">Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.</p>
+                </ion-col>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-col>
+    <ion-col size="10" size-sm="6" offset="1" offset-sm="3" text-center>
+      <button class="btn_blanco_calendario">Show full calendar</button>
+    </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
