--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -489,3 +489,184 @@ button:focus{
 #nada-h1-margin {
     margin-bottom: 0.5rem;
 }
+ion-card{
+    margin: 0;
+}
+ion-card-content{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.dercha_izquierda_cero{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.titulo_card{
+    color: #656565;
+    font-weight: 900;
+    font-size: 14px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.descrip_pequeña{
+    color: #818181;
+    font-weight: 100;   
+    font-size: 11px;
+    line-height: 1.2;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.numero_color{
+    font-family: 'Montserrat', sans-serif;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    font-size: 10px;
+    font-weight: 900;
+}
+.margin_bottom{
+    margin-bottom: 3px;
+}
+.btn_rojo_car{
+    background-color: #EC494B;
+    width: 100%;
+    color: #ffffff;
+    font-weight: 100;
+    font-size: 10px;
+    height: 100%;
+    border-radius: 10px;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    font-size: 10px;
+    font-weight: 100;
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+@media(min-width: 360px){
+    .titulo_card{
+        font-size: 16px;
+    }
+    .descrip_pequeña{
+        font-size: 12px;
+    }
+    .numero_color{
+        font-size: 12px;
+    }
+    .margin_bottom{
+        margin-bottom: 5px;
+    }
+    .btn_rojo_car{
+        font-size: 11px;
+    }
+}
+@media(min-width: 411px){
+    .titulo_card{
+        font-size: 18px;
+    }
+    .descrip_pequeña{
+        font-size: 14px;
+    }
+    .numero_color{
+        font-size: 14px;
+    }
+    .margin_bottom{
+        margin-bottom: 7px;
+    }
+    .btn_rojo_car{
+        font-size: 13px;
+    }
+}
+@media(min-width: 480px){
+    .titulo_card{
+        font-size: 21px;
+    }
+    .descrip_pequeña{
+        font-size: 13px;
+    }
+    .numero_color{
+        font-size: 12px;
+    }
+    .margin_bottom{
+        margin-bottom: 10px;
+    }
+    .btn_rojo_car{
+        font-size: 13px;
+    }
+}
+@media(min-width: 568px){
+    .titulo_card{
+        font-size: 22px;
+    }
+    .descrip_pequeña{
+        font-size: 17px;
+    }
+    .numero_color{
+        font-size: 16px;
+    }
+    .margin_bottom{
+        margin-bottom: 22px;
+    }
+    .btn_rojo_car{
+        font-size: 13px;
+        border-radius: 15px;
+    }
+}
+@media(min-width: 768px){
+    .titulo_card{
+        font-size: 17px;
+    }
+    .descrip_pequeña{
+        font-size: 13px;
+    }
+    .numero_color{
+        font-size: 12px;
+    }
+    .margin_bottom{
+        margin-bottom: 6px;
+    }
+    .btn_rojo_car{
+        font-size: 11px;
+        border-radius: 15px;
+    }
+}
+@media(min-width: 1024px){
+    .titulo_card{
+        font-size: 23px;
+    }
+    .descrip_pequeña{
+        font-size: 16px;
+    }
+    .numero_color{
+        font-size: 14px;
+    }
+    .margin_bottom{
+        margin-bottom: 13px;
+    }
+    .btn_rojo_car{
+        font-size: 13px;
+        border-radius: 15px;
+    }
+}
+@media(min-width: 1366px){
+    .titulo_card{
+        font-size: 21px;
+    }
+    .descrip_pequeña{
+        font-size: 15px;
+    }
+    .numero_color{
+        font-size: 12px;
+    }
+    .margin_bottom{
+        margin-bottom: 9px;
+    }
+    .btn_rojo_car{
+        font-size: 13px;
+        border-radius: 15px;
+    }
+}
