--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -68,7 +68,7 @@
         <p class="color_blanco" id="paddining_right">Tu puerta al Cusco. Es un ticket único de entrada para todos los lugares importantes en Cusco. Es obligatorio comprarlo par entrar ya que no venden entradas individuales en cada sitio.</p>
         <ion-row>
           <ion-col size="8" offset="4">
-            <button id="bnt_blanco">Complete info ></button>
+            <button id="bnt_blanco" (click)="go_boleto_turistico ()">Complete info ></button>
           </ion-col>
         </ion-row>
       </ion-col>
