--- a/src/app/blog-articulo/blog-articulo.page.html
+++ b/src/app/blog-articulo/blog-articulo.page.html
@@ -1,8 +1,18 @@
-<!--<ion-header>
-  <ion-toolbar>
-    <ion-title>blog-articulo</ion-title>
+<!--ion-header-- no-border>
+  <ion-toolbar mode="ios">
+    <ion-buttons mode="md" slot="start">
+      <ion-back-button mode="md" text="" icon="ios-arrow-back" color="dark"></ion-back-button>
+    </ion-buttons>
+        
+    <ion-buttons mode="md" slot="end">
+      <button class="btn_menu">
+        <div class="div_linea_color div_line_menu"></div>
+        <div class="div_linea_color div_line_menu"></div>
+        <div class="div_linea_color" id="div_line_menu_peque"></div>
+      </button>
+    </ion-buttons>
   </ion-toolbar>
-</ion-header>-->
+</!--ion-header-->
 
 <ion-content>
   <ion-grid class="ion-no-padding">
@@ -18,25 +28,30 @@
         </button>
       </ion-col>
     </ion-row>
+
     <ion-row>
+      <ion-spinner *ngIf="is_loading === true" style="width: 100%; margin-top: 1rem;" class="ion-text-center" name="circles"></ion-spinner>
+    </ion-row>
+
+    <ion-row *ngIf="is_loading === false">
       <ion-col size="12">
-        <h1 class="padding_espacio_descrip titulo_art">Soy el titulo de este articulo de blog</h1>
-        <p class="padding_espacio_descrip pequeño_blog"> Karen Nin</p>
-        <p class="padding_espacio_descrip pequeño_blog">Fecha: 25.09.18</p>
+        <h1 class="padding_espacio_descrip titulo_art">{{ blog?.titulo_es }}</h1>
+        <p class="padding_espacio_descrip pequeño_blog">{{ blog?.autor }}</p>
+        <p class="padding_espacio_descrip pequeño_blog">Fecha: {{ get_date_format (blog?.fecha_creado, 'L') }}</p>
       </ion-col>
       <ion-col size="12" class="ion-no-padding">
-        <p class="padding_espacio_descrip descrip_color">La Dirección de Comercio Exterior y Turismo a través de la Dirección de Turismo pone a disposición de los usuarios información para el sector turismo y de todos aquellos programas y acciones que se vienen realizando para alcanzar un turismo sostenible en el tiempo.</p>
-        <ion-img :src="assets/img/19bdb926157e2433842a419570dda4e2.png"></ion-img>
-        <p class="padding_espacio_descrip descrip_color">Formular, proponer, ejecutar, evaluar y controlar las políticas en materia de desarrollo de la artesanía, en concordancia con la política general del gobierno, los planes sectoriales y las políticas de desarrollo regional. Planificar concertadamente y ejecutar el desarrollo de la actividad artesanal de la región, mediante el aprovechamiento de las potencialidades regionales. Fomentar, desarrollar y ejecutar proyectos, programas u otros mecanismos para promover la competitividad y productividad de la actividad artesanal en la región, con la participación de entidades públicas y privadas.</p>
-        <ion-row>
+        <div [innerHtml]="blog?.detalle_es" class="padding_espacio_descrip descrip_color"></div>
+        <!--ion-img :src="assets/img/19bdb926157e2433842a419570dda4e2.png"></!--ion-img-->
+        <!--p class="padding_espacio_descrip descrip_color">Formular, proponer, ejecutar, evaluar y controlar las políticas en materia de desarrollo de la artesanía, en concordancia con la política general del gobierno, los planes sectoriales y las políticas de desarrollo regional. Planificar concertadamente y ejecutar el desarrollo de la actividad artesanal de la región, mediante el aprovechamiento de las potencialidades regionales. Fomentar, desarrollar y ejecutar proyectos, programas u otros mecanismos para promover la competitividad y productividad de la actividad artesanal en la región, con la participación de entidades públicas y privadas.</!--p>
+        <!--ion-row>
           <ion-col size="6" id="padding_derecha">
             <ion-img :src="assets/img/willian-justen-de-vasconcellos-8lX8jl0y3CI-unsplash.png"></ion-img>
           </ion-col>
           <ion-col size="6" id="padding_izquierda">
             <ion-img :src="assets/img/cef9c9c34a66d925269c2f77b1322607.png"></ion-img>
           </ion-col>
-        </ion-row>
-        <p class="padding_espacio_descrip descrip_color">Formular, proponer, ejecutar, evaluar y controlar las políticas en materia de desarrollo de la artesanía, en concordancia con la política general del gobierno, los planes sectoriales y las políticas de desarrollo regional. Planificar concertadamente y ejecutar el desarrollo de la actividad artesanal de la región, mediante el aprovechamiento de las potencialidades regionales. Fomentar, desarrollar y ejecutar proyectos, programas u otros mecanismos para promover la competitividad y productividad de la actividad artesanal en la región, con la participación de entidades públicas y privadas.</p>
+        </!--ion-row-->
+        <!--p-- class="padding_espacio_descrip descrip_color">Formular, proponer, ejecutar, evaluar y controlar las políticas en materia de desarrollo de la artesanía, en concordancia con la política general del gobierno, los planes sectoriales y las políticas de desarrollo regional. Planificar concertadamente y ejecutar el desarrollo de la actividad artesanal de la región, mediante el aprovechamiento de las potencialidades regionales. Fomentar, desarrollar y ejecutar proyectos, programas u otros mecanismos para promover la competitividad y productividad de la actividad artesanal en la región, con la participación de entidades públicas y privadas.</!--p-->
       </ion-col>
     </ion-row>
   </ion-grid>  
