--- a/src/app/blog/blog.page.html
+++ b/src/app/blog/blog.page.html
@@ -24,93 +24,44 @@
       </ion-col>
     </ion-row>
     <ion-row  class="padding_espacio">
-      <ion-col size="12">
+      <ion-col size="12" *ngIf="is_category_loading === true">
+        <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" name="circles"></ion-spinner>
+      </ion-col>
+
+      <ion-col size="12" *ngIf="is_category_loading === false">
         <div class="div_select">
           <ion-label id="show_border_rigth" mode="ios" interface="popover">Show</ion-label>
-          <ion-select placeholder="All categories" id="select">
-            <ion-select-option value="f">Female</ion-select-option>
-            <ion-select-option value="m">Male</ion-select-option>
+          <ion-select placeholder="All categories" interface="popover" id="select" [(ngModel)]="category_selected" (ionChange)="filter ()">
+            <ion-select-option value="">All categories</ion-select-option>
+            <ion-select-option *ngFor="let item of categories" [value]="item.id">
+              {{ item.nombre }}
+            </ion-select-option>
           </ion-select>
         </div>
       </ion-col>
-      <ion-col size="12" class="ion-no-padding" id="bajar_card">
+
+      <ion-col size="12" *ngIf="is_loading === true">
+        <ion-spinner style="width: 100%; margin-top: 1rem;" class="ion-text-center" name="circles"></ion-spinner>
+      </ion-col>
+
+      <ion-col *ngIf="is_loading === false" size="12" class="ion-no-padding" id="bajar_card">
         <ion-row>
-          <ion-col size="12" size-md="6" class="ion-no-padding ion-margin-bottom espacio_derecha_izquierda">
-            <ion-card>
-              <img src="assets/img/blog_1.png" width="100%" height="100%" class="border_radius_imgcard">
+          <ion-col *ngFor="let item of items" size="12" size-md="6" class="ion-no-padding ion-margin-bottom espacio_derecha_izquierda">
+            <ion-card (click)="view_blog (item)">
+              <img [src]="item.imagen" width="100%" height="100%" class="border_radius_imgcard">
               <ion-card-content>
                 <ion-text>
-                  <h2 class="titulo_car">Soy el titulo de este articulo de blog</h2>
+                  <h2 class="titulo_car">{{ item.titulo_es }}</h2>
                 </ion-text>
                 <ion-row>
                   <ion-col size="8" style="padding-left: 0px;">
-                    <p class="fecha_nombre_color">Por: Lic. Guido Quiniones Paucar</p>
+                    <p class="fecha_nombre_color">Por: {{ item.autor }}</p>
                   </ion-col>
                   <ion-col size="4" class="ion-text-end">
-                    <p class="fecha_nombre_color">Fecha: 25.09.18</p>
+                    <p class="fecha_nombre_color">Fecha: {{ get_date_format (item.fecha_creado, 'L') }}</p>
                   </ion-col>
                 </ion-row>
-                <p class="bajar_conten">La Dirección de Comercio Exterior y Turismo a través de la Dirección de Turismo pone a disposición de los usuarios información para el sector turismo y de todos aquellos programas y acciones que se vienen realizando para alcanzar un turismo sostenible en el tiempo.</p>
-                <button class="btn_leer_color">Leer mas ></button>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-          <ion-col size="12" size-md="6" class="ion-no-padding ion-margin-bottom espacio_derecha_izquierda">
-            <ion-card>
-              <img src="assets/img/blog_1.png" width="100%" height="100%" class="border_radius_imgcard">
-              <ion-card-content>
-                <ion-text>
-                  <h2 class="titulo_car">Soy el titulo de este articulo de blog</h2>
-                </ion-text>
-                <ion-row>
-                  <ion-col size="8" style="padding-left: 0px;">
-                    <p class="fecha_nombre_color">Por: Lic. Guido Quiniones Paucar</p>
-                  </ion-col>
-                  <ion-col size="4" class="ion-text-end">
-                    <p class="fecha_nombre_color">Fecha: 25.09.18</p>
-                  </ion-col>
-                </ion-row>
-                <p class="bajar_conten">La Dirección de Comercio Exterior y Turismo a través de la Dirección de Turismo pone a disposición de los usuarios información para el sector turismo y de todos aquellos programas y acciones que se vienen realizando para alcanzar un turismo sostenible en el tiempo.</p>
-                <button class="btn_leer_color">Leer mas ></button>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-          <ion-col size="12" size-md="6" class="ion-no-padding ion-margin-bottom espacio_derecha_izquierda">
-            <ion-card>
-              <img src="assets/img/blog_1.png" width="100%" height="100%" class="border_radius_imgcard">
-              <ion-card-content>
-                <ion-text>
-                  <h2 class="titulo_car">Soy el titulo de este articulo de blog</h2>
-                </ion-text>
-                <ion-row>
-                  <ion-col size="8" style="padding-left: 0px;">
-                    <p class="fecha_nombre_color">Por: Lic. Guido Quiniones Paucar</p>
-                  </ion-col>
-                  <ion-col size="4" class="ion-text-end">
-                    <p class="fecha_nombre_color">Fecha: 25.09.18</p>
-                  </ion-col>
-                </ion-row>
-                <p class="bajar_conten">La Dirección de Comercio Exterior y Turismo a través de la Dirección de Turismo pone a disposición de los usuarios información para el sector turismo y de todos aquellos programas y acciones que se vienen realizando para alcanzar un turismo sostenible en el tiempo.</p>
-                <button class="btn_leer_color">Leer mas ></button>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-          <ion-col size="12" size-md="6" class="ion-no-padding ion-margin-bottom espacio_derecha_izquierda">
-            <ion-card>
-              <img src="assets/img/blog_1.png" width="100%" height="100%" class="border_radius_imgcard">
-              <ion-card-content>
-                <ion-text>
-                  <h2 class="titulo_car">Soy el titulo de este articulo de blog</h2>
-                </ion-text>
-                <ion-row>
-                  <ion-col size="8" style="padding-left: 0px;">
-                    <p class="fecha_nombre_color">Por: Lic. Guido Quiniones Paucar</p>
-                  </ion-col>
-                  <ion-col size="4" class="ion-text-end">
-                    <p class="fecha_nombre_color">Fecha: 25.09.18</p>
-                  </ion-col>
-                </ion-row>
-                <p class="bajar_conten">La Dirección de Comercio Exterior y Turismo a través de la Dirección de Turismo pone a disposición de los usuarios información para el sector turismo y de todos aquellos programas y acciones que se vienen realizando para alcanzar un turismo sostenible en el tiempo.</p>
+                <p class="bajar_conten">{{ item.resumen_es }}</p>
                 <button class="btn_leer_color">Leer mas ></button>
               </ion-card-content>
             </ion-card>
